# threshold-app

./: .gitignore  LICENSE  README.md  SETUP.md  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml
Poftfolio Files/: README.txt
Watchlist Files/: README.txt
tests/: conftest.py  test_advanced.py  test_aggregator.py  test_composite.py  test_config.py  test_data_adapters.py  test_drawdown_backtest.py  test_exemptions.py  test_fred_adapter.py  test_gate3.py  test_grace_period.py  test_integration_phase6.py  test_journal.py  test_onboarding.py  test_output.py  test_performance.py  test_pipeline.py  test_portfolio_construction.py  test_position_import.py  test_properties.py  test_regression.py  test_risk.py  test_sa_api_fetcher.py  test_sa_export_reader.py  test_scorer.py  test_signals.py  test_snapshot.py  test_storage.py  test_subscores.py  test_technical.py  test_watcher.py  test_watchlist.py
threshold/: __init__.py  __main__.py
threshold/cli/: config_cmd.py  dashboard_cmd.py  import_cmd.py  main.py  score.py  sync_cmd.py  ticker.py  watch_cmd.py
threshold/config/: __init__.py  defaults.py  loader.py  schema.py
threshold/data/: __init__.py  onboarding.py  position_import.py  snapshot.py  watcher.py
threshold/data/adapters/: __init__.py  fred_adapter.py  sa_api_fetcher.py  sa_export_reader.py  (+1 more)
threshold/engine/: __init__.py  aggregator.py  composite.py  context.py  drawdown_backtest.py  exemptions.py  gate3.py  grace_period.py  grades.py  pipeline.py  scorer.py  signals.py  subscores.py  technical.py
threshold/migrations/: 001_initial.sql  002_advanced_modules.sql  003_portfolio_state.sql  004_journal_performance.sql
threshold/output/: __init__.py  alerts.py  charts.py  dashboard.py  narrative.py
threshold/portfolio/: __init__.py  accounts.py  allocation.py  correlation.py  journal.py  ledger.py  performance.py  watchlist.py
threshold/storage/: __init__.py  database.py  migrations.py  queries.py
(+14 files in other folders)
